# portfolio-risk-ai

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
examples/: aggressive.json  balanced.json  conservative.json
src/timecell/: __init__.py  ai_client.py  cli.py  config.py  explainer.py  history.py  market.py  models.py  prompts.py  risk.py  stress.py  var.py
tests/: test_risk.py  test_stress.py  test_var.py
