[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timecell"
version = "1.0.0"
description = "Family-office portfolio risk: math in Python, narration by Claude, what-if stress-tests in plain English."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Khush Chaudhari" }]

dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "yfinance>=0.2.40",
    "numpy>=1.26",
    "rich>=13.7",
    "typer>=0.12",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.5",
]

[project.scripts]
timecell = "timecell.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/timecell"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# E501: line length handled separately. B008: Typer requires call-in-default for Argument/Option.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --tb=short"
